--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testcafe-reporter-sentry",
   "version": "0.1.0",
-  "description": "sentry TestCafe reporter plugin.",
+  "description": "Sentry TestCafe reporter plugin.",
   "repository": "https://github.com/fallard84/testcafe-reporter-sentry",
   "author": {
     "name": "Francois Allard",
